--- a/deb/src/DEBIAN/control
+++ b/deb/src/DEBIAN/control
@@ -2,7 +2,8 @@ Package: py-relay
 Version: 1.0-16
 Section: IoT
 Priority: optional
-Architecture: amd64
+#Architecture: amd64
+Architecture: armhf
 Depends: python-prctl, python-mysqldb, python-smbus
 Suggests: python-pip
 Recommends: monit
