--- a/src/py-relay.conf
+++ b/src/py-relay.conf
@@ -11,5 +11,5 @@ Verbose = 1
 #ExceptionHook = false
 
 # python packages
-PkgPath = /usr/lib/python2.7/dist-packages, /home/linux/virtenv/myapp/lib/python2.7/site-packages
-
+#PkgPath = /usr/lib/python2.7/dist-packages, /home/linux/virtenv/myapp/lib/python2.7/site-packages
+PkgPath = /home/linux/virtenv/myapp/lib/python2.7/site-packages
