--- a/src/py-relay.conf
+++ b/src/py-relay.conf
@@ -12,4 +12,4 @@ Verbose = 1
 
 # python packages
 #PkgPath = /usr/lib/python2.7/dist-packages, /home/linux/virtenv/myapp/lib/python2.7/site-packages
-PkgPath = /home/linux/virtenv/myapp/lib/python2.7/site-packages
+#PkgPath = /home/linux/virtenv/myapp/lib/python2.7/site-packages
