--- a/const.conf
+++ b/const.conf
@@ -4,7 +4,7 @@ Platform="amd64"
 #
 Name="py-relay"
 DirSrc="src"
-#DirSrc="/usr/lib/py-relay"
+DirSrcRelease="/usr/lib/py-relay"
 #
 DirDebRoot="deb"
 DirDeb="${DirDebRoot}/${Name}_${Ver}_${Platform}"
