--- a/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
+++ b/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
@@ -1,7 +1,15 @@
+#--- VladVons@gmail.com
+
 #--- control py-relay process
 check process py-relay-proces with pidfile /var/run/py-relay.pid
     start program = "/etc/init.d/py-relay start"
     stop program  = "/etc/init.d/py-relay stop"
+
+#--- last access to watch file
+check file py-relay-timestam with path "/var/log/py-relay/py-relay.wd.log"
+   if timestamp > 2  minutes then alert
+   if timestamp > 5  minutes then exec "/usr/lib/py-relay/py-relay.sh Restart"
+   if timestamp > 10 minutes then exec "/usr/lib/py-relay/py-relay.sh Reboot"
 
 #--- control max log file size
 check file py-relay-file with path "/var/log/py-relay/py-relay.log"
