--- a/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
+++ b/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
@@ -1,9 +1,9 @@
 #--- VladVons@gmail.com
 
 #--- control py-relay process
-check process py-relay-proces with pidfile /var/run/py-relay.pid
-    start program = "/etc/init.d/py-relay start"
-    stop program  = "/etc/init.d/py-relay stop"
+#check process py-relay-proces with pidfile /var/run/py-relay.pid
+#    start program = "/etc/init.d/py-relay start"
+#    stop program  = "/etc/init.d/py-relay stop"
 
 #--- last access to watch file
 check file py-relay-timestam with path "/var/log/py-relay/py-relay.wd.log"
