--- a/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
+++ b/deb/src/CONTENTS/etc/monit/conf.d/py-relay.conf
@@ -5,11 +5,17 @@
 #    start program = "/etc/init.d/py-relay start"
 #    stop program  = "/etc/init.d/py-relay stop"
 
+##--- check for multiple instance 
+#check program py-relay-count with path "/usr/lib/py-relay/py-relay.sh CheckCount"
+#    if status != 0 then alert
+#    if status != 0 for 3 cycles then exec "/usr/lib/py-relay/py-relay.sh Reboot py-relay-count"
+
 #--- last access to watch file
 check file py-relay-timestam with path "/var/log/py-relay/py-relay.wd.log"
-   if timestamp > 2  minutes then alert
-   if timestamp > 5  minutes then exec "/usr/lib/py-relay/py-relay.sh Restart"
-   if timestamp > 10 minutes then exec "/usr/lib/py-relay/py-relay.sh Reboot"
+  if timestamp > 2  minutes then alert
+  if timestamp > 5  minutes then exec "/usr/lib/py-relay/py-relay.sh Restart py-relay-timestam"
+  if timestamp > 10 minutes then exec "/usr/lib/py-relay/py-relay.sh Reboot py-relay-timestam"
+
 
 #--- control max log file size
 check file py-relay-file with path "/var/log/py-relay/py-relay.log"
