--- a/src/Plugin/Profiles/Default/macros.conf
+++ b/src/Plugin/Profiles/Default/macros.conf
@@ -1,11 +1,12 @@
 #          |                       |                       |           |           |
 # 00 01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 00 01 02 03
 #
-cDayOn=03:00
-cDayOff=19:00
+cDay1_On=03:00
+cDay1_Mid=12:00
+cDay1_Off=19:00
 #
-cMatoch2_HumidMin=70
-cMatoch2_HumidMax=98
+cMatoch1_Humid1_Min = 65
+cMatoch1_Humid1_Max = 98
 #
 Sensor_DH_Humid_3_Max = 50
 Sensor_DH_Humid_3_Min = 30
